# SCP-API

./: .breakpoints  .gitignore  .replit  LICENSE  README.md  pyproject.toml  server.py
static/javascript/: highlight.min.js
static/stylesheets/: darkhighlight.css  style.css
templates/: highlight.min.js  style.css
templates/documentation/: endpoints.html  index.html
templates/errors/: error.html
