[tool.poetry]
name = "repl_python3_beta_SCP-API"
version = "0.1.0"
description = ""
authors = ["Adxxmm <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
beautifulsoup4 = "^4.10.0"
Flask-Limiter = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
